Fixed the white overflow

--- a/src/App.css
+++ b/src/App.css
@@ -4,10 +4,7 @@
   padding: 2rem;
   text-align: center;
 }
-body {
-  background-color: #000 !important;
-  overflow: hidden;
-}
+
 .logo {
   height: 6em;
   padding: 1.5em;
